--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 atomicwrites==1.4.1
 attrs==21.4.0
+autopep8==1.6.0
 bleach==5.0.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
@@ -14,6 +15,7 @@ numpy==1.23.1
 pkginfo==1.8.3
 pluggy==1.0.0
 py==1.11.0
+pycodestyle==2.8.0
 Pygments==2.12.0
 pytest==4.4.1
 pytest-runner==4.4
@@ -24,7 +26,9 @@ rfc3986==2.0.0
 rich==12.4.4
 scipy==1.8.1
 six==1.16.0
+svgpathtools==1.5.1
 svgwrite==1.4.2
+toml==0.10.2
 twine==4.0.1
 urllib3==1.26.10
 webencodings==0.5.1
