--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,48 @@
 atomicwrites==1.4.1
 attrs==21.4.0
 autopep8==1.6.0
+bcrypt==3.2.2
 bleach==5.0.1
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
+click==8.1.3
 commonmark==0.9.1
+cryptography==37.0.4
+distlib==0.3.5
 docutils==0.19
+fabric==2.7.1
+filelock==3.7.1
+Flask==2.1.3
+Flask-Cors==3.0.10
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.12.0
+invoke==1.7.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 keyring==23.6.0
+Kivy==2.1.0
+Kivy-examples==2.1.0
+Kivy-Garden==0.1.5
+MarkupSafe==2.1.1
 metamaterial-generator @ file:///Users/jmankoff/Research/embroidery/meta-embroidery/dist/metamaterial_generator-0.1.0-py3-none-any.whl
 more-itertools==8.13.0
+nodeenv==1.7.0
 numpy==1.23.1
+paramiko==2.11.0
+parcel==0.2.2
+pathlib2==2.3.7.post1
+Pillow==9.2.0
 pkginfo==1.8.3
+platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 Pygments==2.12.0
+PyNaCl==1.5.0
 pytest==4.4.1
 pytest-runner==4.4
 readme-renderer==35.0
@@ -26,10 +52,13 @@ rfc3986==2.0.0
 rich==12.4.4
 scipy==1.8.1
 six==1.16.0
+SQLAlchemy==1.4.39
 svgpathtools==1.5.1
-svgwrite==1.4.2
+svgwrite==1.4.3
 toml==0.10.2
 twine==4.0.1
 urllib3==1.26.10
+virtualenv==20.15.1
 webencodings==0.5.1
+Werkzeug==2.1.2
 zipp==3.8.0
